[OG-6] Orders, Clients, Telegram Notification
